2010-07-12  John W. Eaton  <jwe@octave.org>

	* general/display.m: Print usage message if nargin != 1.
	Bug #30421.

2010-07-09  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* general/interp2.m: improve input argument handling and
	allow not equally spaced griddata (bug #29601)

2010-07-08  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Fix incorrect handling of nondefault fill
	values in min/max reductions of integers.

2010-07-07  David Bateman  <dbateman@free.fr>

	* __next_line_color__.m: Allow conditional initialisation of the
	color_rotation variable.
	* __next_line_style__.m: Allow conditional initialisation of the
	style_rotation variable.
	* hold.m: Support "hold all".
	* newplot.m: Conditionally initialisation the line style and color
	based on the __hold_all__ axes property.

2010-07-04  Soren Hauberg  <hauberg@gmail.com>

	* polynomial/deconv.m: ensure that the orientation of the third
	input to 'filter' matches the orientation of 'y'.

2010-07-02  Rik <octave@nomad.inbox5.com>

        * audio/wavread.m: Correctly handle non-word aligned data chunks.
        (bug #30309).

2010-06-16  Rik <octave@nomad.inbox5.com>

        * plot/stairs.m: Add additional calling forms to documentation.

2010-06-24  John W. Eaton  <jwe@octave.org>

	* plot/private/__plt__.m: Replace usage message with error.
	* plot/loglog.m, plot/plot.m, plot/polar.m, plot/semilogx.m,
	plot/semilogy.m: Call print_usage if no args are supplied.
        Add additional calling forms to documentation.

2010-06-24  Shai Ayal  <shaiay@users.sourceforge.net>

	* plot/print.m: convert to wrapper for backend specific print functions
	* plot/__gnuplot_print__.m: New gnuplot specific print function,
	largely based on the former print.m
	* plot/__fltk_print__.m: New fltk specific print function
	* plot/__print_parse_opts__.m: New option parser for print
	functions, largely based on the former print.m
	* plot/module.mk: Add new m-files here
